--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "key_list": ["benessereevita.it", "nutrizione"],
+    "urls": ["dieta dimagrante", "tisana zenzero", "partita iva nutrizionista", "nutrizionista napoli"],
+    "key_list": ["www.benessereevita.it"],
     "page_to_parse": 50,
     "max_time_to_wait": 5
 }
